--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>Herman Miller Capstone Project</title>
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -9,56 +13,84 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
-
-  <body>
+</head>
+<body>
+  <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <div class = "row">
-        <h2><span style="color: #f44336"><b>material</b></span> classification engine</h2>
-        <h6>a <a href="https://www.hermanmiller.com/">@hermanmiller</a> prototype for classifying fabrics</h6>
-        <div class="row">
-            <div class="col s3 ">
-              </div>
-            <div class="col s2 m6">
-              <div style="padding-top: 100px;">
-                  <h3>live<b> models</b> </h3>
-              <div class="card red">
-                
-                  <div class="collection red">
-                      <a href="#!" class="collection-item ">ImageNet Inception v3 Color classifier</a>
-                      <a href="#!" class="collection-item active">RGB Adaboost Decision Tree Classifier - 80% accuracy</a>
-                      <a href="#!" class="collection-item">ImageNet Inception v3 Pattern classifier</a>
-                    </div>
-              </div>
-              <!--<div class="center-align">
-              <h5><span style="color: #000000"> Submit an image below to see the results</b></span></h5>
-              </div>-->
-              </div>
-            </div>
-          </div>
+
+      <br><br>
+      <h2 class="header center black-text">Herman Miller Capstone Project</h2>
+      <div class="row center">
+        <h5 class="header col s12 light">Material Normalization Using Computer Vision</h5>
       </div>
-      <div class="center-align">
-        <div >
-    
-        <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
-          <label class="btn red ">
-              <input  type=file name=photo>
-          </label>
+      <div class="row">>
+        <div class="col s3 ">
+          </div>
+        <div class="col s2 m6">
+            <div style="padding-top: 50px;">
+                <h3>live<b> models</b> </h3>
+                <div class="card red">
 
-          <input class = 'btn grey' type="submit">
-        </form>
-
+                    <div class="collection red">
+                        <a href="#!" class="collection-item ">ImageNet Inception v3 Color classifier</a>
+                        <a href="#!" class="collection-item active">RGB Adaboost Decision Tree Classifier - 80% accuracy</a>
+                        <a href="#!" class="collection-item">ImageNet Inception v3 Pattern classifier</a>
+                    </div>
+                </div>
+                <!--<div class="center-align">
+                <h5><span style="color: #000000"> Submit an image below to see the results</b></span></h5>
+                </div>-->
+            </div>
         </div>
       </div>
-      
+      <div class="center-align">
+          <div >
+              <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
+                  <label class="btn red ">
+                      <input  type=file name=photo>
+                  </label>
+
+                  <input class = 'btn grey' type="submit">
+              </form>
+          </div>
+      </div>
+      <br><br>
 
     </div>
-    
+  </div>
+
+    <footer class="page-footer black">
+        <div class="container">
+            <div class="row">
+                <div class="col l3 s12">
+                    <h5 class="white-text">The Team:</h5>
+                    <ul>
+                        <li>Ritwik Biswas</li>
+                        <li>Ted Stacy</li>
+                        <li>Josh Bhattarai</li>
+                        <li>Joe Smith</li>
+                        <li>David Xuan</li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Herman Miller Contacts:</h5>
+                    <ul>
+                        <li>Tom Holcomb</li>
+                        <li>Andrea Haggerty</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Template provided by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+            </div>
+        </div>
+    </footer>
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
-      
