fixed a loose close-tag, r ready for another deployment to heroku?

--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -25,14 +25,13 @@
       <div class="row center">
         <h5 class="header col s12 light">Material Normalization Using Computer Vision</h5>
       </div>
-      <div class="row">>
+      <div class="row">
         <div class="col s3 ">
           </div>
         <div class="col s2 m6">
             <div style="padding-top: 50px;">
-                <h3>live<b> models</b> </h3>
+                <h3>live <b>models</b></h3>
                 <div class="card red">
-
                     <div class="collection red">
                         <a href="#!" class="collection-item ">ImageNet Inception v3 Color classifier</a>
                         <a href="#!" class="collection-item active">RGB Adaboost Decision Tree Classifier - 80% accuracy</a>
@@ -46,7 +45,7 @@
         </div>
       </div>
       <div class="center-align">
-          <div >
+          <div>
               <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
                   <label class="btn red ">
                       <input  type=file name=photo>
