--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -17,6 +17,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+    <nav class="black">
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">
+                <img class="responsive-img" src="{{url_for('static', filename='herman-miller-logo.svg')}}">
+            </a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </div>
+    </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
 
@@ -59,35 +69,6 @@
 
     </div>
   </div>
-
-    <footer class="page-footer black">
-        <div class="container">
-            <div class="row">
-                <div class="col l3 s12">
-                    <h5 class="white-text">The Team:</h5>
-                    <ul>
-                        <li>Ritwik Biswas</li>
-                        <li>Ted Stacy</li>
-                        <li>Josh Bhattarai</li>
-                        <li>Joe Smith</li>
-                        <li>David Xuan</li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Herman Miller Contacts:</h5>
-                    <ul>
-                        <li>Tom Holcomb</li>
-                        <li>Andrea Haggerty</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-
-            </div>
-        </div>
-    </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
