refactored in-line js to own file

--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-    <nav class="black">
+    <nav class="red darken-1">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
