--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -7,40 +7,42 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/materialize.css') }}"> -->
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-    <nav class="black">
+       
+    <nav class="red darken-1">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">
+            <a href="#" style='padding-top: 8px; padding-left: 8px' class="brand-logo">
                 <img class="responsive-img" src="{{url_for('static', filename='herman-miller-logo.svg')}}">
             </a>
+            <a href="#" style='font-family: Nunito; font-weight: bold; padding-left: 60px' class="brand-logo">Materialize Classification Engine</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/about.html">About</a></li>
+                    <li><a href="/"><i class="material-icons">home</i></a></li>
+                    <li><a href="/about.html"><i class="material-icons">info</i></a></li>
             </ul>
+
         </div>
     </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
 
       <br><br>
-      <h2 class="header center black-text">Herman Miller Capstone Project</h2>
-      <div class="row center">
-        <h5 class="header col s12 light">Material Normalization Using Computer Vision</h5>
-      </div>
+      <!-- <h2 class="header center black-text">Herman Miller Capstone Project</h2> -->
       <div class="row">
         <div class="col s3 ">
           </div>
         <div class="col s2 m6">
             <div style="padding-top: 50px;">
-                <h3>live <b>models</b></h3>
+                <h4>live <b>models</b></h4>
                 <div class="card red">
                     <div class="collection red">
                         <a href="#!" class="collection-item ">ImageNet Inception v3 Color classifier</a>
@@ -57,8 +59,8 @@
       <div class="center-align">
           <div>
               <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
-                  <label class="btn red ">
-                      <input  type=file name=photo>
+                  <label class="btn red darken-1 ">
+                      <input  type='file' name='photo' multiple required>
                   </label>
 
                   <input class = 'btn grey' type="submit">
@@ -70,7 +72,7 @@
     </div>
   </div>
 
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
