--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -22,7 +22,7 @@
     <nav class="red darken-1">
         <div class="nav-wrapper">
             <a href="#" style='padding-top: 8px; padding-left: 8px' class="brand-logo">
-                <img class="responsive-img" src="{{url_for('static', filename='herman-miller-logo.svg')}}">
+                <img class="responsive-img" src="{{url_for('static', filename='hermanmiller.png')}}">
             </a>
             <a href="#" style='font-family: Nunito; font-weight: bold; padding-left: 60px' class="brand-logo">Materialize Classification Engine</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
