--- a/web-app/templates/picture.html
+++ b/web-app/templates/picture.html
@@ -10,50 +10,52 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
 
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  </head>
-
-    <body style="background-image: url({{url_for('static', filename='4.png')}})">
-        <nav class="transparent">
-            <div class="nav-wrapper">
-                    <a href="#" style='padding-top: 8px; padding-left: 8px' class="brand-logo">
-                        <img class="responsive-img" src="{{url_for('static', filename='herman-miller-logo.svg')}}">
-                    </a>
-                    <a href="#" style='font-family: Nunito; padding-left: 60px' class="brand-logo">Materialize Classification Engine</a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="/"><i class="material-icons">home</i></a></li>
-                        <li><a href="/about.html"><i class="material-icons">info</i></a></li>
-                    </ul>
-
-            </div>
-        </nav>
-        <div class="container">
-            {% for item in data %}
-            <div class="row">
-                <div style="padding-top: 100px;">
-                    <div class="col s3"></div>
-                    <div class="col s6">
-                        <div class="card large">
-                            <div class="card-image">
-                                <img src='{{ item[0] }}'>
+<body style="background: rgb(255,7,109);
+background: linear-gradient(270deg, rgba(255,7,109,1) 0%, rgba(223,20,60,1) 100%);">
+    <nav class="transparent">
+        <div class="nav-wrapper">
+            <a href="#" style='padding-top: 8px; padding-left: 8px' class="brand-logo">
+                <img class="responsive-img" src="{{url_for('static', filename='hermanmiller.png')}}">
+            </a>
+            <a href="#" style='font-family: Nunito; padding-left: 60px' class="brand-logo">Materialize Classification Engine</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/"><i class="material-icons">home</i></a></li>
+                <li><a href="/about.html"><i class="material-icons">info</i></a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        {% for item in data %}
+        <div class="row">
+            <div style="padding-top: 100px;">
+                <div class="col s3"></div>
+                <div class="col s6">
+                    <div class="card large">
+                        <div class="card-image">
+                            <img src='{{ item[0] }}'>
+                        </div>
+                        <div class="card-content">
+                            <div class="left-align">
+                                <h4 style='font-family: Nunito; font-weight: bold;'><b>{{ item[1] }}</b></h4>
+                                <h5 style='font-family: Nunito; text-align: left'><b>Blank Style</b></h5>
                             </div>
-                            <div class="card-content">
-                                <div class="left-align">
-                                    <h3 style='font-family: Nunito; font-weight: bold;'><b>{{ item[1] }}</b></h3>
-                                    <h5 style='font-family: Nunito; font-weight: bold;'><b>Blank Style</b></h5>
-                                </div>
+                            <div class="right-align">
+                                <a href=""><p style='font-family: Nunito; display: block'>More Details</p></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col s3"></div>
                 </div>
+                <div class="col s3"></div>
             </div>
-            {% endfor %}
         </div>
-       <!--JavaScript at end of body for optimized loading-->
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
+        {% endfor %}
+    </div>
+   <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
 </html>
