--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -7,116 +7,92 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    
-
 </head>
-<body style="background: rgb(252,73,141);
-background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;">  
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <div class="row">
-        <div class="col s4">
-            <h3 style='padding-left: 40px; font-family: Nunito; font-weight: bold; color: white;'>fiber</h3>
+<body style="background: white"> <!--style="background: rgb(252,73,141);
+background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;">-->
+    <nav>
+        <div style="background: rgb(252,73,141);
+        background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;" class="nav-wrapper">
+            <a href="#" style='padding-left: 20px; font-family: Nunito; font-weight: bold; ' class="brand-logo">FIBRE</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
         </div>
-        <div class="col s7">
-                
-        </div>
-        <div class="col s1" style='padding-top: 40px;'>
-            <a href="/"><i class="small material-icons white-text">home</i></a>
-            <a href="/about.html"><i style='padding-left: 10px;' class="small material-icons white-text">info</i></a>
-        </div>
-    </div>
+    </nav>
     <!--<div class="row">
-      <div class="col s1 sm">
-        <a class="valign-wrapper" href="https://www.hermanmiller.com/" style='padding-top: 25px; padding-left: 20px' class="brand-logo">
-            <img class="responsive-img" src="{{url_for('static', filename='hermanmiller.png')}}">
-        </a>
-        <h3></h3>
-      </div>
-      <div class="col s10">
-          <h3 style='font-family: Nunito; font-weight: bold; color: white;'>Material Classification Engine</h3>
-          <a href="/"><i class="small material-icons white-text">home</i></a>
+        <div class="col s4">
+            <h3 style='padding-left: 40px; font-family: Nunito; font-weight: bold;'>Fabric Classifier</h3>
         </div>
-      <div class="col s6">
-          
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <a href="/"><i class="small material-icons white-text">home</i><p style="color: white;">Home</p></a>
-            <a href="/about.html"><i class="small material-icons white-text">info</i></a>
-          </ul>
-      </div>
-    </div> -->
-
+        <div class="col s6"></div>
+        <div class="col s2" style='padding-top: 40px; text-align: right;'>
+            <a href="/"><i class="small material-icons black-text">home</i></a>
+            <a href="/about.html"><i style='padding-left: 10px;' class="small material-icons black-text">info</i></a>
+        </div>
+    </div>-->
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
-
             <br><br>
             <!-- <h2 class="header center black-text">Herman Miller Capstone Project</h2> -->
             <div class="center-align" style="padding-top: 50px;">
-                    <span style="font-size:60px; font-family: Nunito; color: #ffffff;"> Choosing <b>fabrics</b> made easy.</span>
-
-                </div>
-
-                <div class="center-align" style="padding-top: 20px;">
-                        <div >
-                                <!--Other element insitialisations-->
- 
-                             <div class="carousel">
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='1.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='2.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='3.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='4.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='5.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='6.jpg')}}"></a>
-                                 <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='7.jpg')}}"></a>
-                             </div>
-                     </div>
+                <span style="font-size:60px; font-family: Nunito;"> Choosing <b><span style="color:red">fabrics</span></b> made easy.</span>
+            </div>
+            <div class="center-align" style="padding-top: 20px;">
+                <div>
+                    <!--Other element initialisations-->
+                    <div class="carousel">
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='1.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='2.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='3.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='4.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='5.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='6.jpg')}}"></a>
+                        <a class="carousel-item" href="#one!"><img src="{{url_for('static', filename='7.jpg')}}"></a>
                     </div>
-
-
+                </div>
+            </div>
             <div class="center-align">
                 <div>
                     <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
-                        <label class="btn transparent">
-                            <input  type='file' name='photo' multiple required>
+                        <label class="btn red">
+                            <input style="color: white" type='file' name='photo' multiple required>
                         </label>
-
-                        <input class='btn transparent' type="submit">
+                        <input style="color: white" class='btn red' type="submit">
                     </form>
                 </div>
             </div>
-            
             <br><br>
         </div>
     </div>
     <script type="text/javascript">
-
-
         document.addEventListener('DOMContentLoaded', function() {
             var elems = document.querySelectorAll('.carousel');
             var instances = M.Carousel.init(elems, options);
-          });
+        });
         
-          // Or with jQuery
+        // Or with jQuery
         
-          $(document).ready(function(){
+        $(document).ready(function(){
             $('.carousel').carousel();
          
-          });
-          setTimeout(autoplay, 2000);
+        });
+        setTimeout(autoplay, 2000);
             function autoplay() {
                 $('.carousel').carousel('next');
                 setTimeout(autoplay, 2000);
-            }
+        }
     </script>
     <!-- Compiled and minified JavaScript -->
     <!-- <script type="text/javascript" src="{{ url_for('static', filename='js/test.js') }}"></script> -->
-
-   </body>
+</body>
 </html>
