--- a/web-app/templates/picture.html
+++ b/web-app/templates/picture.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -13,29 +13,25 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    
 </head>
-
-<body style="background: rgb(252,73,141);
-background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;">
-    <div class="row">
-            <div class="col s4">
-                <h3 style='padding-left: 40px; font-family: Nunito; font-weight: bold; color: white;'>fiber</h3>
-            </div>
-            <div class="col s7">
-                    
-            </div>
-            <div class="col s1" style='padding-top: 40px;'>
-            <a href="/"><i class="small material-icons white-text">home</i></a>
-               <a href="/about.html"><i style='padding-left: 10px;' class="small material-icons white-text">info</i></a>
-            </div>
+<body style="background: white"> <!-- style="background: rgb(252,73,141);
+background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;">-->
+    <nav>
+        <div style="background: rgb(252,73,141);
+        background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%) fixed;" class="nav-wrapper">
+            <a href="#" style='padding-left: 20px; font-family: Nunito; font-weight: bold;' class="brand-logo">FIBRE</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
         </div>
+    </nav>
     <div class="container">
         <div class="center-align">
             {% if data|length > 1 %}
-            <h3 style='padding-top: 20px; font-family: Nunito; color: white'>Displaying {{data|length}} results</h3>
+            <h3 style='padding-top: 40px; font-family: Nunito;'>Classification Results for {{data|length}} Fabrics</h3>
             {% else %}
-            <h3 style='padding-top: 20px; font-family: Nunito; color: white'>Displaying {{data|length}} result</h3>
+            <h3 style='padding-top: 40px; font-family: Nunito;'>Classification Result for {{data|length}} Fabric</h3>
             {% endif %}
         </div>
         {% if data|length == 1 %}
@@ -48,10 +44,8 @@ background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%
                                 <img src='{{ data[0][0] }}'>
                             </div>
                             <div class="card-content">
-                                <div class="left-align">
-                                    <h4 style='font-family: Nunito; font-weight: bold;'><b>{{ data[0][1] }}</b></h4>
-                                    <h5 style='font-family: Nunito; text-align: left'><b>{{ data[0][3] }}</b></h5>
-                                </div>
+                                <h5 style='font-family: Nunito;'><b>Color: {{ data[0][1] }}</b></h5>
+                                <h5 style='font-family: Nunito;'><b>Pattern: {{ data[0][3] }}</b></h5>
                                 <div class="right-align">
                                     <form method="post" enctype=multipart/form-data action="{{ url_for('recommendation') }}">
                                         <button class="btn green waves-effect waves-light" type="submit" name="action"> Recommendations 
@@ -77,17 +71,16 @@ background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%
                                     <img src='{{ data[n][0] }}'>
                                 </div>
                                 <div class="card-content">
-                                    <div class="left-align">
-                                        <h4 style='font-family: Nunito; font-weight: bold;'><b>{{ data[n][1] }}</b></h4>
-                                        <h5 style='font-family: Nunito; text-align: left'><b>{{ data[n][3] }}</b></h5>
-                                    </div>
+                                    <h5 style='font-family: Nunito'><b>Color: {{ data[n][1] }}</b></h5>
+                                    <h5 style='font-family: Nunito'><b>Pattern: {{ data[n][3] }}</b></h5>
                                     <div class="right-align">
                                         <form method="post" enctype=multipart/form-data action="{{ url_for('recommendation') }}">
                                             <button class="btn green waves-effect waves-light" type="submit" name="action"> Recommendations 
                                             </button>
-                                            <input name='{{ data[n] }}'>
+                                            <input type="hidden" name='{{ data[n] }}'>
                                         </form>
                                     </div>
+                                    <br>
                                 </div>
                             </div>
                         </div>
@@ -103,15 +96,13 @@ background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%
                                     <img src='{{ data[n][0] }}'>
                                 </div>
                                 <div class="card-content">
-                                    <div class="left-align">
-                                        <h4 style='font-family: Nunito; font-weight: bold;'><b>{{ data[n][1] }}</b></h4>
-                                        <h5 style='font-family: Nunito; text-align: left'><b>{{ data[n][3] }}</b></h5>
-                                    </div>
+                                    <h5 style='font-family: Nunito'><b>Color: {{ data[n][1] }}</b></h5>
+                                    <h5 style='font-family: Nunito'><b>Pattern: {{ data[n][3] }}</b></h5>
                                     <div class="right-align">
                                         <form method="post" enctype=multipart/form-data action="{{ url_for('recommendation') }}">
                                             <button class="btn green waves-effect waves-light" type="submit" name="action"> Recommendations 
                                             </button>
-                                            <input name='{{ data[n] }}'>
+                                            <input type="hidden" name='{{ data[n] }}'>
                                         </form>
                                     </div>
                                 </div>
@@ -124,15 +115,13 @@ background: linear-gradient(325deg, rgba(252,73,141,1) 0%, rgba(249,75,75,1) 57%
                                     <img src='{{ data[n+1][0] }}'>
                                 </div>
                                 <div class="card-content">
-                                    <div class="left-align">
-                                        <h4 style='font-family: Nunito; font-weight: bold;'><b>{{ data[n+1][1] }}</b></h4>
-                                        <h5 style='font-family: Nunito; text-align: left'><b>{{ data[n+1][3] }}</b></h5>
-                                    </div>
+                                    <h5 style='font-family: Nunito'><b>Color: {{ data[n+1][1] }}</b></h5>
+                                    <h5 style='font-family: Nunito'><b>Pattern: {{ data[n+1][3] }}</b></h5>
                                     <div class="right-align">
                                         <form method="post" enctype=multipart/form-data action="{{ url_for('recommendation') }}">
                                             <button class="btn green waves-effect waves-light" type="submit" name="action"> Recommendations 
                                             </button>
-                                            <input name='{{ data[n+1] }}'>
+                                            <input type="hidden" name='{{ data[n+1] }}'>
                                         </form>
                                     </div>
                                 </div>
